Add animated scroll effect to pizza cards

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             </p>
             <h2>Наші піци</h2>
         </div>
+
+
 <div class="cards">
         <div class="card" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/8fe3b555-3cf8-44d9-8ea2-249d9212bf2f-826x0.png"
@@ -106,7 +108,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-
+        <div class="animate-on-scroll">
         <div class="card" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0199050a-5754-73cd-8ff6-2ba791d2313b-826x0.png"
                 class="card-img-top" alt="...">
@@ -116,6 +118,8 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
+</div>
+
 
         <div class="card" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0197c509-e6d5-71a2-b163-b39c15900f00.png"
