--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
         .cards .card {
             width: calc(25% - 20px);
         }
+        .animate-on-scroll {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: all 0.7s ease;
+}
+
+.animate-on-scroll.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
     </style>
     <main>
 
