Add animated card for Барбекю section

--- a/index.html
+++ b/index.html
@@ -110,15 +110,17 @@
 
 
 <div class="cards">
-        <div class="card" style="width: 18rem;">
-            <img src="https://assets.dots.live/misteram-public/8fe3b555-3cf8-44d9-8ea2-249d9212bf2f-826x0.png"
-                class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Барбекю</h5>
-                <p class="card-text"></p>
-                <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
-            </div>
+    <div class="card animate-on-scroll" style="width: 18rem;">
+        <img src="https://assets.dots.live/misteram-public/8fe3b555-3cf8-44d9-8ea2-249d9212bf2f-826x0.png"
+            class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Барбекю</h5>
+            <p class="card-text"></p>
+            <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
         </div>
+    </div>
+</div>
+
         <div class="animate-on-scroll">
         <div class="card" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0199050a-5754-73cd-8ff6-2ba791d2313b-826x0.png"
