Add animation class to card styles

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         }
 
-        .cards .card {
+        .cards .card animate-on-scroll {
             width: calc(25% - 20px);
         }
         .animate-on-scroll {
