--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
     </div>
 </div>
 
-        <div class="animate-on-scroll">
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0199050a-5754-73cd-8ff6-2ba791d2313b-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -131,10 +130,10 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-</div>
 
 
-        <div class="card" style="width: 18rem;">
+
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0197c509-e6d5-71a2-b163-b39c15900f00.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -144,7 +143,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/018f0636-fef3-714e-86c1-1dbe6257a336.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -154,7 +153,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/01954ed2-6f32-7034-8c55-81c38bd73b3a.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -164,7 +163,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0193d6d0-e4ce-705b-bb26-99009fd680aa.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -174,7 +173,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/019a3e2d-c702-71b6-8ae5-941211a64cf5-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -184,7 +183,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/018f0634-2b86-7206-b94c-d394c7202da9-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -194,7 +193,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0196884b-bb01-72a9-b40a-9a6fdf00baca-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -204,7 +203,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0190732a-93a9-72ad-aca6-475d34ec3c17.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -214,7 +213,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/d380a62d-2919-42b0-a0f6-64513c9c4ed1-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -224,7 +223,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0194cb8b-4e44-71a6-9bb1-5841916d61cf-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -234,7 +233,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/019421eb-6e43-7322-9f97-69bfcbeab872.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -244,7 +243,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0195eef1-d24b-7366-91ec-e855d9620036-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -254,7 +253,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/091ebefa-6343-4e3f-bfc2-3d048dd8a9a7-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -264,7 +263,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/a1df31bd-4061-46d2-b520-7ee39fe4f100-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -274,7 +273,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/091d9090-1445-4122-9400-83d065054ec0-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -284,7 +283,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/c2ea44e6-a2aa-488b-ac78-f4533d7c5e5f-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -294,7 +293,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/018f0636-fef3-714e-86c1-1dbe6257a336-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -304,7 +303,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnk8cfQY8GJ20uuCLGbMnNAqSnHFX74YBrwg&s"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -314,7 +313,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/b5a74c90-0a99-4581-8cc9-ac6ff96a48c2-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -324,7 +323,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0198644a-22a3-7301-a20f-ea542fb387f8.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -334,7 +333,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/0191b286-8700-7194-95c3-9f27120b14cd-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -344,7 +343,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/1e429b5b-6e18-43bd-832e-b101240672a9.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
