Add animation to card elements on scroll

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/e4dc961f-c2ea-4eb7-9302-91675dedc207-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -363,7 +363,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/50f4a096-9521-4572-9f87-9ea7c9852d39-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -372,7 +372,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/01924681-9ba1-71b3-9040-abe27a686921.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -381,7 +381,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/d2246f20-39e4-4fe3-87c1-cd23372992c9-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -390,7 +390,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/06c49c2b-5ff4-48bd-ad5a-0feefb1876d4-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -399,7 +399,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/018f0631-5882-7138-9bfd-f9eb6a2cca09-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -408,7 +408,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/d23f1590-2a2a-4599-bd3f-c65876ffde59-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -417,7 +417,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/018f0636-1a0c-72ed-83ff-ee44226de69a.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -426,7 +426,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/01954ed2-6f32-7034-8c55-81c38bd73b3a-826x0.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -435,7 +435,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/018f063f-1db5-72f6-8f36-30e1df4a98bb.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -444,7 +444,7 @@
                 <a href="https://treba.pizza/" class="btn btn-primary">Перейти на сайт</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card animate-on-scroll" style="width: 18rem;">
             <img src="https://assets.dots.live/misteram-public/018f063d-24eb-726a-9579-dff50898c0c1.png"
                 class="card-img-top" alt="...">
             <div class="card-body">
